# hulk-compiler

./: Cargo.toml  Makefile  README.md  REPORT.md
docs/: DOCUMENTATION.md
runtime/: runtime.c
src/: ast.rs  main.rs
src/backend/: context.rs  emit.rs  error.rs  functions.rs  method_slots.rs  mod.rs  runtime.rs  types.rs
src/backend/decl/: decl_types.rs  functions.rs  methods.rs  mod.rs
src/backend/expr/: assign.rs  binary.rs  block.rs  call.rs  control_flow.rs  let_expr.rs  mod.rs  new.rs  postfix.rs  primary.rs  unary.rs
src/diagnostics/: diagnostic.rs  mod.rs  render.rs
src/lexer/: error.rs  lexer.rs  mod.rs  span.rs  tests.rs  token.rs
src/parser/: error.rs  mod.rs  program.rs  test_utils.rs  tests.rs
src/parser/decl/: function_decl.rs  mod.rs  protocol_decl.rs  type_decl.rs
src/parser/expr/: assign.rs  binary.rs  block.rs  control_flow.rs  let_expr.rs  mod.rs  new.rs  postfix.rs  primary.rs  unary.rs
src/parser/snapshots/: hulk__parser__program__tests__parser_snapshot_program_basic.snap  hulk__parser__program__tests__parser_snapshot_program_basic_entry_point.snap  hulk__parser__program__tests__parser_snapshot_program_block_entry_point_semi.snap  hulk__parser__tests__parser_snapshot_unit_test.snap  hulk_compiler__parser__program__tests__parser_snapshot_program_basic.snap  (+4 more)
src/semantic/: analyzer.rs  builtin.rs  context.rs  decl.rs  error.rs  hir.rs  mod.rs  symbols.rs  test_utils.rs  tests.rs  types.rs
src/semantic/decl/: check.rs  collect.rs  declarations.rs  (+9 more)
stdlib/: prelude.hulk
tests/: example.hulk  recursion.hulk  render.hulk  ships.hulk
(+62 files in other folders)
