[package]
name = "hulk-compiler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hulk"
path = "src/main.rs"

[dependencies]
ariadne = "0.6.0"
chumsky = "0.13.0"
inkwell = { version = "0.9.0", features = ["llvm18-1"] }
logos = "0.15"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.47.2", features = ["json", "yaml"] }
